fix styles
FIX EXTRA PADDING BOTTOM CONVERSATION ON MOBILE

--- a/src/styles/components/chat.css
+++ b/src/styles/components/chat.css
@@ -573,8 +573,8 @@
     }
 
     .messages-container {
-        padding-bottom: 80px;
-        scroll-padding-bottom: 80px;
+        padding-bottom: 18px;
+        scroll-padding-bottom: 18px;
     }
 
     .message-content img {
